--- a/hellojavafx/pom.xml
+++ b/hellojavafx/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>it1901</groupId>
-	<artifactId>javafx-app</artifactId>
+	<artifactId>hellojavafx</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
@@ -93,7 +93,7 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.4</version>
 				<configuration>
-					<mainClass>javafxapp.App</mainClass>
+					<mainClass>hellojavafx.App</mainClass>
 				</configuration>
 			</plugin>
 		</plugins>
